Fixed the cards alignment

--- a/public/main.css
+++ b/public/main.css
@@ -651,7 +651,7 @@ background-image: url('./Assets/Images_index/robot.jpg');
   font-family: "breymont-bold";
   font-style: bold;
   color:white;
-  font-size:50px;
+  font-size:40px;
   text-decoration: underline;
 }
 .cards h3{
